Fixed dead footer links on iPhone (z-index).

--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -26,7 +26,7 @@
 
   &__description {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     font-weight: 300;
     line-height: 1.65;
   }
@@ -37,6 +37,8 @@
 
   &__description--last {
     margin-bottom: 80px;
+    width: 70%;
+    margin: 3rem auto;
   }
 
   &__close {
