--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -38,6 +38,7 @@
     grid-row: 2/3;
     justify-content: center;
     align-self: center;
+    z-index: 3;
     /* border: 1px solid lightblue; */
     transform: translateY(1rem);
 
@@ -52,6 +53,7 @@
     grid-column: 2/3;
     grid-row: 1/2;
     justify-self: right;
+    z-index: 3;
     /* border: 1px solid gold; */
 
     @mixin 800plus {
@@ -65,6 +67,7 @@
     grid-column: 1/2;
     grid-row: 1/2;
     justify-self: left;
+    z-index: 3;
     /* border: 1px solid lightseagreen; */
 
     @mixin 800plus {
