--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -48,7 +48,7 @@
       left: 0;
       transform: scale(2);
 
-      padding: 8px 36px 9px 36px;
+      padding: 10px 20px 11px 20px;
 
       .site-header--dark & {
         transform: scale(1);
